; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_is_zero_s.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_is_zero_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_values_s = common dso_local global i64* null, align 8
@CONSTTIME_TRUE_S = common dso_local global i32 0, align 4
@CONSTTIME_FALSE_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_is_zero_s to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_is_zero_s(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i64*, i64** @test_values_s, align 8
  %6 = load i32, i32* %3, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i64, i64* %5, i64 %7
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @constant_time_is_zero_s(i64 %13)
  %15 = load i32, i32* @CONSTTIME_TRUE_S, align 4
  %16 = call i32 @TEST_size_t_eq(i32 %14, i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %30

19:                                               ; preds = %12, %1
  %20 = load i64, i64* %4, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %19
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @constant_time_is_zero_s(i64 %23)
  %25 = load i32, i32* @CONSTTIME_FALSE_S, align 4
  %26 = call i32 @TEST_uint_eq(i32 %24, i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %22
  store i32 0, i32* %2, align 4
  br label %30

29:                                               ; preds = %22, %19
  store i32 1, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %28, %18
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @TEST_size_t_eq(i32, i32) #1

declare dso_local i32 @constant_time_is_zero_s(i64) #1

declare dso_local i32 @TEST_uint_eq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
